2007-01-14  Nathaniel Smith  <njs@pobox.com>

	* m4/boost.m4: Check for another possible library suffix used on
	some Cygwin builds (patch from Vaclav Haisman).

2007-01-14  Derek Scherger  <derek@echologic.com>

	* file_io.{cc,hh} (walk_tree_recursive): use entry instead of di
	for consistency
	(walk_tree): remove unused require_existing_path arg

2007-01-14  Matthew Gregan  <kinetik@orcon.net.nz>

	* sqlite/*: Import SQLite 3.3.10.

2007-01-13  Zack Weinberg  <zackw@panix.com>

	* schema_migration.cc (sql::exec): Process an entire sequence of
	SQL statements.
	(migrate_sql_schema, test_migration_step): Handle all-SQL
	migrators (i.e. pass the strings to sql::exec).
	(migrate_*): Where entirely composed of calls to sql::exec,
	replace with a giant string constant containing all the SQL
	statements in order.
	(sql::sql): Support more than one statement per string.
	(sql::column_nonnull): New.
	(struct migration_event): Replace migrator field with migrator_sql
	and migrator_func.
	(migration_events): Put each entry's migrator in the appropriate field.
	(schema_to_migration): Return a migration_event *, not an integer.
	(migrate_to_external_privkeys): This is the only migration step
	that still needs to be a function.  Simplify by using a single
	joined SELECT rather than copying everything into maps.

	* schema_migration.cc: Further prune using-declarations.
	(migrate_*): Use sql::exec directly.  Shorten names.  Don't call
	set_regime.  Remove errmsg and upgrade_regime arguments.  Change
	app_state argument to a reference.  Return void.
	(logged_sqlite3_exec, set_regime, move_table): Delete.
	(enum upgrade_regime): Move to just above the migration_events table.
	(struct migration_event): Add third 'regime' field.
	(migration_events): Fill in the migration regimes.
	(migrator_cb): Adjust.
	(migrate_monotone_schema): Rename migrate_sql_schema.  Register
	unbase64 here.  Change app_state argument to a refernece.  Handle